--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -39,7 +39,7 @@
     <string name="activated">Attivo</string>
     <string name="not_installed">Non installato</string>
     <string name="partial_activated">Parzialmente attivo</string>
-    <string name="need_update">Richiede l\'aggiornamento</string>
+    <string name="need_update">Aggiornamento richiesto</string>
     <string name="selinux_policy_not_loaded_summary">SEPolicy non è caricato correttamente</string>
     <string name="selinux_policy_not_loaded"><![CDATA[<b>WARNING:</b> SEPolicy non è caricato correttamente, i moduli che effettuano l\'hook del framework di sistema non funzioneranno.<br>Segnala il problema allo sviluppatore di <a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a>.]]></string>
     <string name="system_inject_fail_summary">Injection del framework di sistema fallita</string>
@@ -141,8 +141,8 @@
 
     <!-- SettingsActivity -->
     <string name="settings_group_framework">Framework</string>
-    <string name="settings_enable_resources">Abilita l\'hook delle risorse</string>
-    <string name="settings_enable_resources_summary"><b>ATTENZIONE:</b> l\'hook delle risorse è sperimentale</string>
+    <string name="settings_enable_resources">Abilita gli hook delle risorse</string>
+    <string name="settings_enable_resources_summary"><b>ATTENZIONE:</b> gli hook delle risorse sono una funzionalità sperimentale</string>
     <string name="pref_title_disable_verbose_log">Disabilita il log verboso</string>
     <string name="pure_black_dark_theme">Tema nero puro</string>
     <string name="pure_black_dark_theme_summary">Usa il tema nero puro se il tema scuro è abilitato</string>
