--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -103,15 +103,12 @@
     <string name="compile_failed">优化失败或返回值为空</string>
     <string name="compile_failed_with_info">优化失败: </string>
     <string name="sort_by_name">应用名称</string>
-    <string name="sort_by_name_reverse">应用名称（降序）</string>
     <string name="sort_by_package_name">包体名称</string>
-    <string name="sort_by_package_name_reverse">包体名称（降序）</string>
     <string name="sort_by_install_time">安装时间</string>
-    <string name="sort_by_install_time_reverse">安装时间（降序）</string>
     <string name="sort_by_update_time">更新时间</string>
-    <string name="sort_by_update_time_reverse">更新时间（降序）</string>
+    <string name="sort_reverse">降序</string>
     <string name="menu_show_system_apps">系统应用</string>
-    <string name="menu_sort">排序…</string>
+    <string name="menu_sort">排序</string>
     <string name="enable_module">启用模块</string>
     <string name="no_scope_selected">未选择任何应用。继续？</string>
     <string name="menu_show_games">游戏</string>
@@ -125,7 +122,7 @@
     <string name="update_available">可用更新：%1$s</string>
     <string name="module_disabled_no_selection">由于未选择任何应用，模块 %s 已被禁用。</string>
     <string name="android_framework">系统框架</string>
-    <string name="menu_backup_and_restore">备份…</string>
+    <string name="menu_backup_and_restore">备份</string>
     <string name="menu_backup">备份</string>
     <string name="menu_restore">恢复</string>
     <string name="force_stop">强行停止</string>
@@ -133,7 +130,7 @@
     <string name="force_stop_dlg_text">强行停止某个应用可能会导致其出现异常。</string>
     <string name="reboot_required">需要重新启动才能应用此更改</string>
     <string name="reboot">重新启动</string>
-    <string name="menu_hide">隐藏…</string>
+    <string name="menu_hide">隐藏</string>
 
     <!-- ModulesActivity and AppListActivity -->
     <string name="modules_other_app">在其它应用中查看</string>
