--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -93,15 +93,12 @@
     <string name="compile_failed">優化失敗或返回值為空</string>
     <string name="compile_failed_with_info">優化失敗: </string>
     <string name="sort_by_name">應用名稱</string>
-    <string name="sort_by_name_reverse">應用名稱（降冪）</string>
     <string name="sort_by_package_name">包體名稱</string>
-    <string name="sort_by_package_name_reverse">包體名稱（降冪）</string>
     <string name="sort_by_install_time">安裝時間</string>
-    <string name="sort_by_install_time_reverse">安裝時間（降冪）</string>
     <string name="sort_by_update_time">更新時間</string>
-    <string name="sort_by_update_time_reverse">更新時間（降冪）</string>
+    <string name="sort_reverse">降冪</string>
     <string name="menu_show_system_apps">系統應用</string>
-    <string name="menu_sort">排序…</string>
+    <string name="menu_sort">排序</string>
     <string name="enable_module">啟用模組</string>
     <string name="no_scope_selected">未選擇任何應用。繼續？</string>
     <string name="menu_show_games">遊戲</string>
@@ -114,7 +111,7 @@
     <string name="requested_by_module">推薦的應用</string>
     <string name="module_disabled_no_selection">由於未選擇任何應用，模組 %s 已被禁用。</string>
     <string name="android_framework">系統框架</string>
-    <string name="menu_backup_and_restore">備份…</string>
+    <string name="menu_backup_and_restore">備份</string>
     <string name="menu_backup">備份</string>
     <string name="menu_restore">恢復</string>
     <string name="force_stop">Force stop</string>
