--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,137 +18,179 @@
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+<resources>
+    <!-- MainActivity -->
+    <string name="info">Информация</string>
     <string name="Install">Установить</string>
     <string name="InstallDetail">Нажмите, чтобы установить LSPosed</string>
-    <string name="Modules">Модули</string>
+    <string name="Modules">Установленные модули</string>
+    <plurals name="modules_enabled_count">
+        <item quantity="one">%d модуль включен</item>
+        <item quantity="few">%d модуля включены</item>
+        <item quantity="many">%d модулей включено</item>
+        <item quantity="other">%d модулей включено</item>
+    </plurals>
     <string name="Logs">Логи</string>
     <string name="Settings">Настройки</string>
-    <string name="About">О модификации</string>
+    <string name="About">О приложении</string>
+    <string name="module_repo">Репозиторий</string>
+    <string name="module_repo_summary">Репозиторий модулей (Бета)</string>
+    <string name="about_view_source_code"><![CDATA[Просмотреть исходный код на %1$s<br/>Присоединяйтесь к нашему %2$s каналу]]></string>
+    <string name="about_translators">Переводчики: %s</string>
 
-    <!-- General/various strings -->
+    <string name="activated">Активирован!</string>
+    <string name="not_installed">Не установлен</string>
+    <string name="partial_activated">Частично активирован!</string>
+    <string name="need_update">Требуется обновление</string>
+    <string name="selinux_policy_not_loaded_summary">SEPolicy не загружен должным образом</string>
+    <string name="selinux_policy_not_loaded"><![CDATA[<b>ВНИМАНИЕ:</b> SEPolicy не загружается должным образом, модули, которые подключают Framework в систему, не будут работать.<br/>Пожалуйста, сообщите об этом сюда <a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a> разработчик.]]></string>
+    <string name="system_inject_fail_summary">Ошибка внедрения Framework в систему</string>
+    <string name="system_inject_fail"><![CDATA[<b>ВНИМАНИЕ:</b> Ошибка внедрения Framework в систему.<br/>Это редкость и может быть вызвано <b>Magisk</b> или несовместимыми модулями Magisk.<br/>Пожалуйста, попрорбуйте отключить модули Magisk кроме Riru и LSPosed или пришлите полные логи разработчику.]]></string>
+    <string name="system_prop_incorrect_summary">Не правильные системные настройки</string>
+    <string name="system_prop_incorrect"><![CDATA[<b>ВНИМАНИЕ:</b> Не правильные системные настройки.<br/>Некоторые системные настройки нужные для работы удалены или изменены.<br/>Модули могут не работать должным образом.]]></string>
+    <string name="please_update_summary">Пожалуйста, установите последнюю версию LSPosed</string>
+    <string name="info_api_version">Версия API</string>
+    <string name="info_framework_version">Версия Framework</string>
+    <string name="info_manager_version">Версия менеджера</string>
+    <string name="info_system_version">Версия Android</string>
+    <string name="info_device">Устройство</string>
+    <string name="info_system_abi">Разрядность системы ABI</string>
+
+    <!-- LogsActivity -->
     <string name="menuSend">Отправить</string>
     <string name="menuSaveToSd">Сохранить</string>
-
-    <!-- Welcome screen / main sections -->
-
-    <!-- navigation view items -->
-    <string name="nav_item_logs">Детальные логи</string>
+    <string name="nav_item_logs">Подробные логи</string>
     <string name="nav_item_logs_err">Логи модулей</string>
-
-    <!-- Installer tab -->
-    <string name="dont_show_again">Больше не показывать</string>
-
-    <!-- File operations -->
-
-    <!-- Modules tab -->
-    <string name="module_is_not_activated_yet">Модуль LSPosed еще не активирован</string>
-    <string name="module_is_not_activated_yet_detailed">%s установлен, но еще не активирован</string>
-    <string name="module_empty_description">(описание не представлено)</string>
-    <string name="module_no_ui">Этот модуль не предоставляет интерфейса пользователя</string>
-    <string name="xposed_module_updated_notification_title">Модуль LSPosed обновлен</string>
-    <string name="warning_xposed_min_version">Этот модуль требует более новой версии LSPosed (%d), поэтому его невозможно активировать</string>
-    <string name="no_min_version_specified">Этот модуль не определяет нужную ему версию LSPosed.</string>
-    <string name="warning_min_version_too_low">Этот модуль был создан для версии LSPosed %1$d, но из-за несовместимых изменений в версии %2$d был отключен</string>
-    <string name="module_app_info">Информация о приложении</string>
-    <string name="module_uninstall">Удалить</string>
-
-    <!-- Download tab -->
-    <string name="menuReload">Перезагрузить</string>
-
-    <!-- Settings tab -->
-    <string name="settings_group_framework">Структура</string>
-    <string name="settings_enable_resources">Включить хуки ресурсов</string>
-    <string name="settings_enable_resources_summary">ВНИМАНИЕ: хуки ресурсов Экспериментальный</string>
-
-    <!-- Support tab -->
-
-    <!-- Logs tab  -->
-    <string name="logs_save_failed">Не удалось сохранить:</string>
-    <string name="menuClearLog">Очистить логи сейчас</string>
-    <string name="logs_cleared">Логи успешно очищены.</string>
-
-    <!-- About tab -->
-
-    <!-- DownloadView -->
-
-    <!-- DownloadUtils -->
-
-    <!-- RepoLoader -->
-
-    <string name="warning_installed_on_external_storage">Этот модуль нельзя загрузить, поскольку он установлен на SD-карте, перенесите его во внутреннюю память</string>
-
-    <string name="info">Информация</string>
-
+    <string name="dont_show_again">Больше не показывать это сообщение</string>
+    <string name="logs_save_failed">Ошибка сохранения:</string>
+    <string name="menuClearLog">Очистить логи</string>
+    <string name="logs_cleared">Логи успешно очищены</string>
     <string name="scroll_top">Прокрутить вверх</string>
     <string name="loading">Загрузка…</string>
     <string name="scroll_bottom">Прокрутить вниз</string>
+    <string name="logs_cannot_read">Невозможно прочитать логи: \n</string>
+    <string name="menuReload">Обновить</string>
+    <string name="logs_clear_failed_2">Не удалось очистить логи</string>
+    <string name="not_logcat_2">Это логи LSPosed и модулей. Если вам нужны логи Android, вы можете попробовать модуль Log Catcher для Magisk или спросить на 4pda</string>
 
-    <!-- LSPd related -->
+    <!-- Notification -->
+    <string name="module_is_not_activated_yet">Модуль еще не включен</string>
+    <string name="module_is_not_activated_yet_detailed">Модуль %s установлен но не включен</string>
+    <string name="xposed_module_updated_notification_content">Модуль %s обновлен</string>
+
+    <!-- ModulesActivity -->
+    <string name="module_empty_description">(описание отсутствует)</string>
+    <string name="module_no_ui">Этот модуль не содержит пользовательского интерфейса</string>
+    <string name="xposed_module_updated_notification_title">Модуль обновлен</string>
+    <string name="warning_xposed_min_version">Этот модуль требует более новой версии LSPosed (%d) и не может быть включен</string>
+    <string name="no_min_version_specified">Этот модуль не указал версию LSPosed, в которой он нуждается</string>
+    <string name="warning_min_version_too_low">Этот модуль был создан для LSPosed версии %1$d, но из-за несовместимых изменений в версии %2$d, он был выключен</string>
+    <string name="warning_installed_on_external_storage">Этот модуль не может быть загружен, потому что он установлен на SD-карте, переместите его во внутреннюю память</string>
+    <string name="module_uninstall">Удалить</string>
+    <string name="module_settings">Открыть настройки</string>
+    <string name="view_in_repo">Просмотр в репозитории</string>
+    <string name="module_uninstall_message">Вы точно хотите удалить это модуль?</string>
+    <string name="module_uninstalled">Модуль %1$s удален!</string>
+    <string name="module_uninstall_failed">Удаление прервано</string>
+    <string name="module_installed">Добавить %1$s для пользователя %2$s</string>
+    <string name="module_install_failed">Добавление модуля не удалось</string>
+    <string name="install_to_user">Установить пользователю %s</string>
+    <string name="install_to_user_message">Хотите установить %1$s пользователю %2$s? Рекомендуется устанавливать вручную, принудительная установка через LSPosed может вызвать проблемы</string>
+
+    <!-- AppListActivity -->
+    <string name="compile_speed">Повторная оптимизация</string>
     <string name="compile_speed_msg">Оптимизация…</string>
-    <string name="compile_done">Оптимизация завершена.</string>
-
-    <string name="pref_title_disable_verbose_log">Отключить подробные логи</string>
-    <string name="logs_cannot_read">Невозможно прочитать логи:</string>
+    <string name="compile_done">Оптимизация завершена</string>
     <string name="app_launch">Запустить</string>
     <string name="compile_failed">Ошибка оптимизации или возвращено пустое значение</string>
-    <string name="compile_failed_with_info">Ошибка оптимизации:</string>
-    <string name="not_installed">Не установлено</string>
-    <string name="pure_black_dark_theme">Использовать черную тему</string>
-    <string name="sort_by_name">Сортировать по названию приложения</string>
-    <string name="sort_by_package_name">Сортировать по названию пакета</string>
-    <string name="sort_by_install_time">Сортировать по времени установки</string>
-    <string name="sort_by_update_time">Сортировать по времени обновления</string>
-    <string name="settings_group_theme">Тема</string>
-    <string name="menu_show_system_apps">Системные приложения</string>
-    <string name="menu_sort">Сортировка…</string>
+    <string name="compile_failed_with_info">Ошибка оптимизации: </string>
+    <string name="sort_by_name">По названию приложения</string>
+    <string name="sort_by_name_reverse">По названию приложения (обратный)</string>
+    <string name="sort_by_package_name">По названию пакета</string>
+    <string name="sort_by_package_name_reverse">По названию пакета (обратный)</string>
+    <string name="sort_by_install_time">По времени установки</string>
+    <string name="sort_by_install_time_reverse">По времени установки (обратный)</string>
+    <string name="sort_by_update_time">По времени обновления</string>
+    <string name="sort_by_update_time_reverse">По времени обновления (обратный)</string>
+    <string name="menu_show_system_apps">Системные</string>
+    <string name="menu_sort">Сортировать</string>
     <string name="enable_module">Включить модуль</string>
     <string name="no_scope_selected">Вы не выбрали ни одного приложения. Продолжить?</string>
     <string name="menu_show_games">Игры</string>
     <string name="menu_show_modules">Модули</string>
     <string name="failed_to_save_scope_list">Не удалось сохранить список областей</string>
-    <string name="module_settings">Настройки модуля</string>
-    <string name="app_description">%1$s\nВерсия %2$s</string>
-    <string name="use_recommended">Рекомендуется</string>
+    <string name="app_description">%1$s\nВерсия: %2$s</string>
+    <string name="use_recommended">Рекомендуемые</string>
     <string name="no_scope_selected_has_recommended">Вы не выбрали ни одного приложения. Выбрать рекомендуемые приложения?</string>
     <string name="use_recommended_message">Выбрать рекомендуемые приложения?</string>
-    <string name="requested_by_module">Рекомендуется</string>
-    <string name="module_disabled_no_selection">Модуль %s отключен, так как ни одна программа не выбрана.</string>
-    <string name="android_framework">Системная Структура</string>
-    <string name="app_destroyed">Эта программа прекратила работу, пожалуйста, убедитесь, что загрузили ее из официального источника.</string>
-    <string name="compile_speed">Повторная оптимизация</string>
-    <string name="outdated_manager">Версия LSPosed Manager и LSPosed Core не согласуются. Пожалуйста, установите соответствующую версию.</string>
-    <string name="lsposed_not_active">LSPosed пока не установлен или не активен.</string>
+    <string name="requested_by_module">Рекомендуемые</string>
+    <string name="update_available">Доступно обновление: %1$s</string>
+    <string name="module_disabled_no_selection">Модуль %s выключен, так как ни одно приложение не выбрано</string>
+    <string name="android_framework">Системный Framework</string>
+    <string name="menu_backup_and_restore">Резервная копия</string>
+    <string name="menu_backup">Создать</string>
+    <string name="menu_restore">Восстановить</string>
+    <string name="force_stop">Остановить</string>
+    <string name="force_stop_dlg_title">Остановить приложение?</string>
+    <string name="force_stop_dlg_text">Принудительная остановка приложения выгружает его из запущенных</string>
+    <string name="reboot_required">Для применения этого изменения требуется перезагрузка</string>
+    <string name="reboot">Перезагрузка</string>
+    <string name="menu_hide">Скрыть приложения</string>
+
+    <!-- ModulesActivity and AppListActivity -->
+    <string name="modules_other_app">Магазин приложений</string>
+    <string name="module_app_info">О приложении</string>
+
+    <!-- SettingsActivity -->
+    <string name="settings_group_framework">Framework</string>
+    <string name="settings_enable_resources">Включить перехват ресурсов</string>
+    <string name="settings_enable_resources_summary"><b>ВНИМАНИЕ:</b> Перехват ресурсов работает в экспериментальном режиме</string>
+    <string name="pref_title_disable_verbose_log">Выключить подробные логи</string>
+    <string name="pure_black_dark_theme">Черная тема</string>
+    <string name="pure_black_dark_theme_summary">Использовать черную тему, когда включена темная</string>
+    <string name="settings_group_theme">Тема</string>
     <string name="settings_backup_and_restore">Резервное копирование и восстановление</string>
-    <string name="settings_backup_and_restore_summery">Резервное копирование или восстановление списка модулей и списков областей.</string>
-    <string name="settings_backup">Сделать резервное копирование</string>
+    <string name="settings_backup_and_restore_summery">Списка модулей и областей</string>
+    <string name="settings_backup">Создать</string>
     <string name="settings_backuping">Резервное копирование…</string>
     <string name="settings_backup_success">Резервное копирование завершено!</string>
     <string name="settings_backup_failed">Не удалось сделать резервную копию</string>
-    <string name="settings_restore">Восстанавливать</string>
+    <string name="settings_restore">Восстановить</string>
     <string name="settings_restoring">Восстановление…</string>
     <string name="settings_restore_success">Восстановление завершено!</string>
     <string name="settings_restore_failed">Не удалось восстановить</string>
-    <string name="menu_backup_and_restore">Создание резервной копии…</string>
-    <string name="menu_backup">Создать резервную копию</string>
-    <string name="menu_restore">Восстановить</string>
-    <string name="xposed_module_updated_notification_content">%s обновлён</string>
-    <string name="module_repo">Репозиторий</string>
-    <string name="module_repo_summary">Репозиторий модулей (Бета)</string>
-    <string name="module_readme">Readme</string>
-    <string name="module_releases">Релизаты</string>
+    <string name="group_network">Сеть</string>
+    <string name="dns_over_http">DNS через HTTPS</string>
+    <string name="dns_over_http_summary">Протокол для выполнения разрешения DNS по протоколу HTTPS. Целью этого метода является повышение конфиденциальности и безопасности пользователей путем предотвращения перехвата и манипулирования данными DNS с помощью атак типа «Атака посредника»</string>
+    <string name="theme_color">Акцент темы</string>
+    <string name="theme_color_summary">Цвет, который чаще всего появляется в приложении</string>
+    <string name="theme_color_system_accent">Системный цвет акцента</string>
+    <string name="settings_show_hidden_icon_apps_enabled">Принудительно показывать иконку запуска</string>
+    <string name="settings_show_hidden_icon_apps_enabled_summary">После Android 10, приложения (особенно модули LSPosed) не могут скрывать иконку запуска в лаунчер. Выключите переключатель, чтобы отключить эту функцию</string>
+    <string name="settings_group_system">Система</string>
+
+    <!-- Module Repo -->
+    <string name="module_readme">Описание</string>
+    <string name="module_releases">Версии</string>
     <string name="module_information">Информация</string>
-    <string name="module_information_homepage">Домашняя страница</string>
+    <string name="module_information_homepage">Homepage</string>
     <string name="module_information_source_url">Исходный код</string>
-    <string name="module_information_collaborators">Коллекционеры</string>
+    <string name="module_information_collaborators">Разработчик</string>
     <string name="module_release_view_assets">Вложения</string>
     <string name="menu_open_in_browser">Открыть в браузере</string>
     <string name="refresh">Обновить</string>
-    <string name="group_network">Сеть</string>
-    <string name="dns_over_http">DNS поверх HTTPS</string>
-    <string name="dns_over_http_summary">Обходное DNS-травление в некоторых странах</string>
-    <string name="about_view_source_code"><![CDATA[Просмотреть исходный код по %1$s<br/>Присоединяйтесь к нашему %2$s каналу]]></string>
     <string name="module_release_load_more">Показать старые версии</string>
-    <string name="module_release_no_more">Больше нет выпуска</string>
-    <string name="theme_color">Цвет темы</string>
+    <string name="module_release_no_more">Больше нет других версий</string>
+    <string name="repo_load_failed">Не удалось загрузить репозиторий модуля: %s</string>
+
+    <string name="app_destroyed">Эта приложение повреждено. Убедитесь, что загрузили ее из официального источника</string>
+    <string name="outdated_manager">Версия LSPosed Manager и LSPosed Core не подходят. Пожалуйста, установите соответствующую версию</string>
+    <string name="lsposed_not_active">LSPosed не установлен или не активирован!</string>
+    <string name="verbose_log_not_avaliable">Подробные логи не доступны. Если вы только что включили их, для применения требуется перезагрузка</string>
+    <string name="NotInstall">Не установлен!</string>
+    <string name="NotInstallDetail">LSPosed не установлен!</string>
+    <string name="translators"><![CDATA[<a href="https://github.com/LSPosed/LSPosed">LSPosed</a>]]></string>
+    <string name="copy_toast_msg">Скопировано</string>
+    <string name="list_empty">¯\\\\_(ツ)_\/¯\nЗдесь ничего нет</string>
+    <string name="add_module_to_user">Добавить модуль пользователю</string>
 </resources>
